banner structure ready

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h3 class="nav-title">On<span class="txt-primary">i</span>ck</h3>
         <ul>
@@ -22,6 +22,16 @@
           <li><button class="btn-primary nav-btn">Hire Me</button></li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h3 class="banner-gret">Hi, I am</h3>
+          <h1 class="banner-title">Onick Ahmed</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam pariatur perspiciatis fuga iure libero laudantium tenetur itaque quibusdam commodi sed.</p>
+          <button class="btn-primary">Download Cv</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        <img class="profile-pic" src="assets/images/hardy.png" alt="">
+      </div>
     </header>
     <main></main>
     <footer></footer>
