--- a/index.html
+++ b/index.html
@@ -26,14 +26,63 @@
         <div class="banner-content">
           <h3 class="banner-gret">Hi, I am</h3>
           <h1 class="banner-title">Onick Ahmed</h1>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam pariatur perspiciatis fuga iure libero laudantium tenetur itaque quibusdam commodi sed.</p>
+          <p class="banner-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam pariatur perspiciatis fuga iure libero laudantium tenetur itaque quibusdam commodi sed.</p>
           <button class="btn-primary">Download Cv</button>
           <button class="btn-primary">Contact</button>
         </div>
         <img class="profile-pic" src="assets/images/hardy.png" alt="">
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, atque dolorem facilis commodi voluptas labore, ipsam quidem exercitationem minima officiis voluptates, dolor aliquid quae eius. Ratione, quia soluta fuga impedit ex quasi, corrupti, placeat incidunt sunt cupiditate aspernatur laudantium et dolore necessitatibus laborum illo fugit nihil officiis consequuntur commodi facilis.</p>
+        <div class="about-container">
+          <div class="about-info">
+            <h4 class="info-title">Name</h4>
+            <p class="info-desc">Onick</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Email</h4>
+            <p class="info-desc">onickahmed@gmail.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Date of Birth</h4>
+            <p class="info-desc">21-09-1991</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From</h4>
+            <p class="info-desc">Bangladesh</p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h3 class="section-title">What I Do</h3>
+        <p class="whatIDo section-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem quaerat fugiat eius suscipit iure, sit recusandae nulla! Sint expedita voluptate atque, officiis repellendus suscipit! Praesentium dolor excepturi at. Voluptate sit doloremque tenetur quae ab. Expedita.</p>
+        <div class="skills-container">
+          <div class="skill">
+            <img src="assets/images/icons/js.png" alt="">
+            <h3 class="skill-title">Vanilla Javascript</h3>
+            <p class="skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam repellendus aliquam, saepe consequuntur perferendis expedita quaerat odit. Nostrum, dicta vitae!</p>
+          </div>
+          <div class="skill">
+            <img src="assets/images/icons/react.png" alt="">
+            <h3 class="skill-title">React</h3>
+            <p class="skill-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, repellendus harum culpa ad magnam dicta voluptatibus vero est consequuntur impedit?</p>
+          </div>
+          <div class="skill">
+            <img src="assets/images/icons/nodejs.png" alt="">
+            <h3 class="skill-title">Node Js</h3>
+            <p class="skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, voluptatem reprehenderit! Accusantium aspernatur itaque explicabo nisi voluptatibus accusamus nam laboriosam.</p>
+          </div>
+          <div class="skill">
+            <img src="assets/images/icons/mongo.png" alt="">
+            <h3 class="skill-title">MongoDb</h3>
+            <p class="skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, voluptatem reprehenderit! Accusantium aspernatur itaque explicabo nisi voluptatibus accusamus nam laboriosam.</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
